[project]
name = "meho-backplane"
version = "0.1.0-dev"
description = "MEHO governance-layer backplane (HTTP server, observability, audit, federation)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.137.1,<0.138",
    "uvicorn[standard]>=0.49.0",
    "pydantic[email]>=2.13.4",
    "structlog>=26.1.0",
    "prometheus-client>=0.20",
    "authlib>=1.3",
    "httpx>=0.27",
    "hvac>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29",
    "alembic>=1.18.5",
    "jsonschema>=4.26.0",
    # jsonschema asserts ``format: date-time`` only when this package is
    # importable — the MCP tools/call gate passes
    # ``Draft202012Validator.FORMAT_CHECKER`` and relies on the checker
    # being registered (``format: uuid`` needs no extra dependency).
    "rfc3339-validator>=0.1.4",
    "defusedxml>=0.7.1",
    "pgvector>=0.3,<1.0",
    "fastembed>=0.7,<1.0",
    "kubernetes-asyncio>=36.1.0,<37",
    "redis>=8.0.1,<9",
    "tenacity>=9.0",
    "asyncssh>=2.24.0,<3.0",
    "packaging>=24.0",
    "python-frontmatter>=1.3.0",
    "jinja2>=3.1.6",
    "google-auth>=2.55.1",
    "duckdb>=1.5.4",
    "pyarrow>=21.0.0",
    "msgspec>=0.20.0",
    "tabulate>=0.9.0",
    # ``[anthropic]`` brings the Anthropic SDK + the
    # :class:`pydantic_ai.models.anthropic.AnthropicModel` provider; the
    # G11.1 default tier path runs through it (see G11.1-T1 #808 +
    # G11.5-T1 #1075). ``[bedrock]`` (G11.5-T2 #1076) adds boto3 +
    # :class:`pydantic_ai.models.bedrock.BedrockConverseModel` so a
    # tenant policy that routes a tier to AWS Bedrock can build the
    # backend. ``[openai]`` (G11.5-T3 #1204) adds the OpenAI SDK +
    # :class:`pydantic_ai.models.openai.OpenAIChatModel` so the same
    # resolver shape can route to OpenAI SaaS / vLLM / Ollama via
    # ``OpenAIProvider(base_url=...)``. All three extras live on the
    # same pin so the version sweep stays monotonic.
    "pydantic-ai-slim[anthropic,bedrock,openai]>=1.107.0",
    "croniter>=6.2.3",
    "markdown-it-py[linkify]>=4.2.0",
    "pygments>=2.18",
    "python-multipart>=0.0.32",
    # G11.4-T3 (#1072) -- Tier-2 free-text NER redaction. Both pins are
    # the 2026-03-15 release (the most recent at task-file time); the
    # version is also called out in the issue body. Loaded **lazily**
    # by :mod:`meho_backplane.redaction.presidio` so a Tier-1-only
    # policy never imports them at runtime (the dep is still installed
    # but stays untouched until a policy with a ``tier2`` block fires).
    "presidio-analyzer==2.2.363",
    "presidio-anonymizer==2.2.362",
    # G3.11-T1 (#1221) — GitHub App authentication mints a 10-minute
    # RS256 JWT (claims iat/exp/iss) and exchanges it for an
    # installation token. PyJWT's ``jwt.encode(payload, key,
    # algorithm="RS256")`` is the documented path; the ``[crypto]``
    # extra pulls the ``cryptography`` backend (already a dev dep, but
    # the extra makes the runtime requirement explicit at install time
    # so a slim wheel install doesn't fail at first ``encode`` call).
    # No stdlib alternative exists for RS256 signing.
    "pyjwt[crypto]>=2.13.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "cryptography>=49.0.0",
    "respx>=0.21",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "aiosqlite>=0.19",
    "testcontainers>=4.0",
    "types-jsonschema>=4.26.0.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meho_backplane"]

# Ship ``alembic.ini`` + the ``alembic/`` migration tree as package
# data adjacent to the ``meho_backplane`` package so installed wheels
# can resolve them via :func:`importlib.resources.files`. The
# in-repo source layout keeps both at ``backend/`` (matching the
# Alembic CLI's cwd-relative discovery rule for local dev); the wheel
# layout collapses them under ``meho_backplane/`` so a ``pip install
# meho-backplane`` deployment doesn't need an external ``alembic.ini``
# bind-mount. ``find_alembic_ini`` (db/migrations.py) walks both
# layouts in order: env var → package data → cwd → source tree.
# MEHO-authored OpenAPI specs + ExecutionProfile documents (#1964 T1
# #1975) ship as package data so a catalog row's ``spec_resource`` /
# ``profile_resource`` resolves via :func:`importlib.resources.files`
# in a deployed wheel. They live INSIDE the package tree
# (``src/meho_backplane/operations/ingest/specs/`` and
# ``src/meho_backplane/connectors/profiles/``), so the ``packages`` glob
# above already collects their ``.yaml`` data files — the same way the
# packaged ``catalog.yaml`` and the ``.j2`` grouping prompts ship. They
# are listed in ``artifacts`` (below) to make the non-``.py`` data-file
# inclusion explicit and robust against a future ``only-include``
# narrowing; they are deliberately NOT in ``force-include`` (that table
# is for trees OUTSIDE the package, like the ``alembic`` tree at
# ``backend/alembic`` — re-including an in-package path there triggers a
# duplicate-archive-entry build failure).
artifacts = [
    "src/meho_backplane/operations/ingest/specs/*.yaml",
    "src/meho_backplane/operations/ingest/specs/*.json",
    "src/meho_backplane/connectors/profiles/*.yaml",
    "src/meho_backplane/connectors/profiles/*.json",
]

[tool.hatch.build.targets.wheel.force-include]
"alembic.ini" = "meho_backplane/alembic.ini"
"alembic" = "meho_backplane/alembic"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins (no shadowing)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts allowed in tests
# Pytest's fixture-injection-by-parameter-name pattern shadows the
# fixture's module-level import name, which ruff's F811 (redefinition
# of unused name) flags on every test function that takes a fixture
# parameter imported from a shared fixtures module. F811 is otherwise
# a useful rule, so the suppression is narrowed to the test files that
# import shared MCP fixtures from ``tests.mcp_test_fixtures`` (rather
# than disabling F811 globally or repeating ``# noqa: F811`` on every
# test signature line).
"tests/test_mcp_audit.py" = ["F811"]
"tests/test_mcp_tool_meho_status.py" = ["F811"]
"tests/test_mcp_resource_tenant_info.py" = ["F811"]
"tests/test_mcp_resource_tenant_feed.py" = ["F811"]
"tests/test_mcp_resource_tenant_conventions.py" = ["F811"]
"tests/test_mcp_initialize_instructions.py" = ["F811"]
"tests/test_mcp_capability_gating.py" = ["F811"]
"tests/test_mcp_inputschema_format_enforcement.py" = ["F811"]
# A005 flags any module name that matches a stdlib module by short name,
# regardless of package path. These two are namespaced under
# `meho_backplane.*` and are never imported as bare `operator` / `logging`,
# so the shadowing risk A005 is designed to catch does not apply.
# Revisit if a future caller does `from meho_backplane.auth import operator`
# and then `operator.attrgetter(...)` — that pattern WOULD be confusing.
"src/meho_backplane/auth/operator.py" = ["A005"]
"src/meho_backplane/logging.py" = ["A005"]
# Vendored JSONFlux tree (#752, from MEHO.X meho_app/jsonflux/ at fc82cf93).
# Kept as a verbatim copy, so the lint carveouts mirror MEHO.X's own and
# additionally cover the rules MEHO.X never tripped because its ruff config
# differs from this repo's:
#   - C901 cognitive complexity, PERF perf-sensitive loops, BLE001 broad
#     excepts at the SQL/IO boundary, ERA001 commented-out documented
#     examples, TCH import-time type-checking blocks, S608 SQL-literal
#     construction on Arrow tables  (the carveouts MEHO.X declares directly).
#   - A002 (`format` arg shadows a builtin) and N806 (Arrow/SQL-style
#     CamelCase locals): this repo selects A + N; MEHO.X does not.
#   - E501 line-too-long and RUF100 unused-noqa: this repo enforces both;
#     MEHO.X ignores them globally. RUF100 fires here because the verbatim
#     source carries `# noqa: S608/S311` for the bandit (S) ruleset, which
#     this repo does not select — the noqa comments are retained for
#     provenance and to keep the tree byte-identical to upstream.
# Revisit on the next upstream sync.
"src/meho_backplane/jsonflux/__init__.py" = ["C901", "PERF", "BLE001", "A002", "RUF100"]
"src/meho_backplane/jsonflux/core/analyzer.py" = ["C901", "ERA001", "PERF", "TCH", "N806"]
"src/meho_backplane/jsonflux/core/converter.py" = ["C901"]
"src/meho_backplane/jsonflux/core/stats.py" = ["C901", "ERA001", "PERF", "E501"]
"src/meho_backplane/jsonflux/query/engine.py" = ["C901", "PERF", "S608", "TCH", "BLE001", "A002", "E501", "RUF100"]
"src/meho_backplane/jsonflux/utils/sampling.py" = ["TCH"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's standard dependency-injection pattern relies on calling
# Depends() / Header() / Query() / Path() / Body() / File() / Form() /
# Security() in argument defaults. B008 would flag every one of those;
# whitelisting them here keeps the rule strict for genuine
# accidental-call defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

# authlib publishes no type stubs (the maintainer migrated typing
# attention to ``joserfc``). Whitelist its module tree rather than
# disabling missing-imports globally — strict mode stays in effect for
# every other dependency.
[[tool.mypy.overrides]]
module = ["authlib.*"]
ignore_missing_imports = true

# hvac (HashiCorp Vault Python client, ADR 0004) ships no ``py.typed``
# marker as of 2.4.0 — every public method returns ``Any``. Whitelisting
# its tree lets strict mode keep biting on the rest of the codebase
# while the Vault wrapper module localises the untyped surface to one
# place. If hvac later ships stubs, drop this override.
[[tool.mypy.overrides]]
module = ["hvac.*"]
ignore_missing_imports = true

# ``requests`` is hvac's transport dependency. We only catch its
# exception types in :mod:`meho_backplane.auth.vault` to map them
# through to backplane-side errors; we don't depend on its public API
# directly. ``types-requests`` would pull a separate stub package into
# the runtime image; whitelisting the module keeps the dev image lean
# without weakening typing for first-party code.
[[tool.mypy.overrides]]
module = ["requests.*"]
ignore_missing_imports = true

# pgvector (https://github.com/pgvector/pgvector-python) ships no
# ``py.typed`` marker as of 0.4 — the SQLAlchemy adapter
# (``pgvector.sqlalchemy.Vector``) is the only API surface we touch
# (in :mod:`meho_backplane.db.models` and migration 0003). Whitelisting
# the module tree lets strict mode keep biting on the rest of the
# codebase while the retrieval substrate localises the untyped surface
# to one declaration. If pgvector later ships stubs, drop this override.
[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

# fastembed (https://github.com/qdrant/fastembed) ships no ``py.typed``
# marker as of 0.8. The only API surface we touch is
# ``fastembed.TextEmbedding`` (in :mod:`meho_backplane.retrieval.embedding`),
# whose constructor + ``.embed()`` method both return iterables of numpy
# arrays untyped at the Python level. Whitelisting the module tree
# localises the untyped surface to the EmbeddingService wrapper.
[[tool.mypy.overrides]]
module = ["fastembed.*"]
ignore_missing_imports = true

# kubernetes_asyncio (G3.2 Initiative #320, decision #8) ships no
# ``py.typed`` marker as of 32.x. The connector module
# (:mod:`meho_backplane.connectors.kubernetes`) localises the untyped
# surface to the ``ApiClient`` / ``VersionApi`` / ``config.*`` calls;
# the rest of the codebase never imports kubernetes_asyncio directly.
# Drop this override if upstream later ships stubs (open issue
# tomplus/kubernetes_asyncio#260 tracks the request).
[[tool.mypy.overrides]]
module = ["kubernetes_asyncio.*"]
ignore_missing_imports = true

# PyYAML ships ``types-PyYAML`` as a separate stub package on PyPI;
# the chassis hasn't needed it before (no Python module reads YAML
# at runtime). The Kubernetes connector parses kubeconfig YAML via
# ``yaml.safe_load`` in one helper. Whitelisting the module tree
# avoids pulling ``types-PyYAML`` into the dev image just for that
# single call site. If a future change broadens YAML usage, swap
# this override for the stub package.
[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

# testcontainers.k3s ships ``py.typed`` for the core package but the
# ``k3s`` submodule has no inline annotations on its public surface.
# Only the integration test
# (:mod:`tests.integration.test_connectors_k8s_k3d`) imports it; the
# override scope stays narrow.
[[tool.mypy.overrides]]
module = ["testcontainers.k3s"]
ignore_missing_imports = true

# asyncssh (G0.2-T4) ships no ``py.typed`` marker as of 2.18. The SSH
# connector adapter (:mod:`meho_backplane.connectors.adapters.ssh`)
# localises the untyped surface to one module. Drop this override if
# upstream ships stubs.
[[tool.mypy.overrides]]
module = ["asyncssh.*"]
ignore_missing_imports = true

# pygments (G10.4-T1 #877) ships no ``py.typed`` marker as of 2.20.
# Used by :mod:`meho_backplane.ui.routes.memory.render` for the
# server-side Markdown code-block syntax highlighter; the call sites
# are scoped to one module so the untyped surface stays narrow.
# ``markdown-it-py`` itself ships ``py.typed``, no override needed.
# Drop this override if upstream ships stubs (``types-Pygments`` is
# available on PyPI but would add a build-time dep).
[[tool.mypy.overrides]]
module = ["pygments", "pygments.*"]
ignore_missing_imports = true

# defusedxml (G3.7-T2 #847) ships no ``py.typed`` marker as of 0.7.1.
# Used by :mod:`meho_backplane.connectors.pfsense.ops_read` to parse the
# pfSense ``config.xml`` safely (XXE-hardened drop-in for the stdlib
# ``xml.etree.ElementTree.fromstring``). Drop this override if upstream
# ships stubs (or switch to ``types-defusedxml``).
[[tool.mypy.overrides]]
module = ["defusedxml.*"]
ignore_missing_imports = true

# python-frontmatter (G4.1-T1 #415) ships no ``py.typed`` marker as
# of 1.1.0. Used by :mod:`meho_backplane.kb.file_walker` for the
# Markdown front-matter parse step (``frontmatter.loads``); the
# ``Post.metadata`` / ``Post.content`` surface is the only API the
# walker touches. Whitelisting localises the untyped surface to the
# walker module. Drop if upstream adds stubs.
[[tool.mypy.overrides]]
module = ["frontmatter.*"]
ignore_missing_imports = true

# google-auth (G3.7-T4 #845) ships partial type stubs (``google-auth``
# bundles ``google.auth._credentials_base`` etc. with ``py.typed``
# present in some sub-packages), but ``google.auth.impersonated_credentials``
# and the transport layer remain untyped at the method level. The
# ``GcloudConnector._fetch_token_sync`` method localises all
# ``google.auth.*`` calls to one place. Whitelisting the full tree keeps
# strict mode biting on every other dependency.
[[tool.mypy.overrides]]
module = ["google.auth.*"]
ignore_missing_imports = true

# tabulate (used by the vendored JSONFlux query engine, #752) ships no
# ``py.typed`` marker as of 0.9.x. It is imported lazily inside the
# ``query_table`` / ``query_print`` rendering paths of
# :mod:`meho_backplane.jsonflux.query.engine`. Whitelisting the module
# avoids pulling ``types-tabulate`` into the dev image just for those
# two call sites. Drop this override if upstream ships stubs.
[[tool.mypy.overrides]]
module = ["tabulate.*"]
ignore_missing_imports = true

# Vendored JSONFlux tree (#752, from MEHO.X meho_app/jsonflux/ at
# fc82cf93). The tree is mypy-clean under MEHO.X's config, which does
# not enable two of this repo's ``strict = true`` sub-flags:
# ``disallow_any_generics`` (bare ``dict``/``list``/``frozenset``
# annotations -> ``type-arg``) and ``no_implicit_reexport`` (re-exports
# without ``__all__`` -> ``attr-defined`` on ``from .core.analyzer
# import ALL_KINDS`` etc.). To keep the tree byte-identical to upstream
# rather than re-annotate ~3.3k LOC, this override relaxes exactly those
# two error codes for the vendored package only — the rest of strict
# mode (untyped-def detection, return-any, etc.) stays in force here,
# and the whole repo outside ``jsonflux`` is unaffected. Revisit /
# tighten on the next upstream sync.
[[tool.mypy.overrides]]
module = ["meho_backplane.jsonflux.*"]
disable_error_code = ["type-arg", "attr-defined"]

# ``croniter`` ships without type stubs (no ``types-croniter`` exists
# at the version we pin, 6.2.2+). The scheduler loop / cron module
# imports it for cron-expression parsing; under the repo's strict
# mypy config (no ``--ignore-missing-imports`` flag), the bare import
# fails with ``Library stubs not installed for "croniter"``. Match
# the pattern the ``tabulate`` / ``asyncssh`` overrides above use.
[[tool.mypy.overrides]]
module = ["croniter.*"]
ignore_missing_imports = true

# Microsoft Presidio (G11.4-T3 #1072) ships ``py.typed`` markers in
# recent releases, but the ``presidio_analyzer.nlp_engine`` and
# ``presidio_anonymizer.entities`` submodules expose APIs whose
# parameter types resolve to ``Any`` under strict mode (the
# ``NlpEngineProvider`` config dict and the ``OperatorConfig`` params
# are deliberately untyped on the upstream surface). The Tier-2
# adapter module (:mod:`meho_backplane.redaction.presidio`) localises
# every Presidio call into one place, so the override scope stays
# narrow. Drop this override if upstream ships stricter stubs.
[[tool.mypy.overrides]]
module = ["presidio_analyzer.*", "presidio_anonymizer.*"]
ignore_missing_imports = true
# ``AnonymizerEngine.__init__`` is documented but typed only as
# ``def __init__(self)`` with no annotations -- strict mode flags
# the construction call as ``no-untyped-call``. Disable that one
# error code for the Tier-2 adapter; every other strict check
# (return-any, untyped-def, arg-type on our own code) stays in force.
[[tool.mypy.overrides]]
module = ["meho_backplane.redaction.presidio"]
disable_error_code = ["no-untyped-call", "arg-type"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Make sibling-of-``src/`` packages (currently ``scripts/`` — the
# operator-run one-shot migrations) importable from tests without
# per-file ``sys.path`` bootstrap. The wheel build target excludes
# ``scripts/`` (see ``[tool.hatch.build.targets.wheel] packages``
# above), so this is **test-only** — operators invoke the scripts
# via ``cd backend && uv run python -m scripts.<name>``, which puts
# ``backend/`` on ``sys.path`` through ``-m``'s implicit handling.
pythonpath = ["."]
# Default-exclude the ``load`` marker so the always-on lane never
# spends the resolver-microbenchmark wall-clock budget. CLI ``-m
# load`` overrides this -- pytest's argparse takes the last ``-m``
# wins. The load suite also self-skips when ``MEHO_RUN_LOAD_TESTS``
# is unset, so a bare ``pytest -m load`` reports the gating contract
# instead of running the timing loop.
addopts = ["-m", "not load"]
# Custom markers — registered so ``pytest --strict-markers`` (when CI
# flips it on) does not warn. Currently:
# * ``slow`` — opt-in only via ``MEHO_RUN_SLOW_TESTS=1``. Used by
#   tests that load the real fastembed ONNX model (~120 MB weight
#   download on cold cache; ~1–2 s load on warm cache). CI's slow
#   lane sets the env var; the always-on lane skips.
# * ``load`` — opt-in only via ``MEHO_RUN_LOAD_TESTS=1`` AND
#   ``pytest -m load`` (default ``addopts`` excludes the marker).
#   Used by G6.3-T6's resolver-cache microbenchmark (#383); a
#   10 000-call timing loop pins the publish-path p99 below 1 ms.
markers = [
    "slow: opt-in network/IO-heavy tests; gate via MEHO_RUN_SLOW_TESTS=1.",
    "load: opt-in resolver/cache microbenchmarks; gate via MEHO_RUN_LOAD_TESTS=1.",
]
# Note: ``authlib.deprecate`` calls ``warnings.simplefilter("always",
# AuthlibDeprecationWarning)`` at import time, so the
# ``AuthlibDeprecationWarning("authlib.jose module is deprecated...")``
# raised on first import shows in the pytest summary even when the
# import is wrapped in ``warnings.catch_warnings()``. The single
# warning is intentional — it's the only signal the test run carries
# of the v0.2 ``joserfc`` migration backlog item, and silencing it
# would risk obscuring future authlib deprecations.

[tool.coverage.run]
# Store file paths in coverage.xml *relative* to the project root rather
# than as absolute runner paths. The unit-test + coverage step (CI's
# `Pytest (unit + coverage)`) and the SonarCloud scan (quality-gate.yml)
# run in separate jobs on separate runners, so absolute paths captured by
# the first never resolve in the second. Relative paths make the report
# portable so SonarCloud can map coverage onto the analysed sources.
relative_files = true
