[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meho-mcp-server"
version = "0.1.0"
description = "MCP server for MEHO introspection - enables LLM access to execution transcripts"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "MEHO Team"}
]
keywords = ["mcp", "meho", "observability", "introspection", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.25.0,<2",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
meho-mcp-server = "meho_mcp_server.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["meho_mcp_server*"]
